--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,3 +1,26 @@
-<p>
-  content works!
-</p>
+<div class="container">
+    <div class="containerForm">
+        <h5 class="titleForm p-3 m-0">{{ 'SEND_EMAIL' | translate }}</h5>
+        <form class="backgroundForm p-4"> 
+            <div class="form-group">
+                <input type="email" class="form-control" placeholder="{{ 'TO' | translate }}">
+            </div>
+            <div class="form-group">
+                <input type="email" class="form-control" placeholder="{{ 'CC' | translate }}">
+            </div>
+            <div class="form-group">
+                <input type="email" class="form-control" placeholder="{{ 'BCC' | translate }}">
+            </div>
+            <div class="form-group">
+                <input type="text" class="form-control" placeholder="{{ 'SUBJECT' | translate }}">
+            </div>
+            <div class="form-group">
+                <textarea class="form-control" placeholder="{{ 'MESSAGE' | translate }}" rows="3"></textarea>
+            </div>
+            <div class="d-flex justify-content-between">
+                <button type="submit" class="btn btn-outline-secondary buttonAttachForm"><i class="fa fa-paperclip"></i></button>
+                <button type="submit" class="btn buttonSendForm" disabled><i class="fa fa-arrow-right"></i> {{ 'SEND' | translate }}</button>
+            </div>
+        </form>
+    </div>
+</div>
