--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -2,6 +2,9 @@
 $body-background-color: #18c4ea;
 $background-title-form: #094358;
 $white: #FFFFFF;
+$black: #000000;
+$error: #dc3545;
+$success: #28a745;
 $border-button: #f0f0f0;
 $button-send-disabled: #e1e1e1;
 $button-send-font-disabled: #6c757d;
